fix: add non-breaking hyphen for the palette labels

--- a/nodes/klicktipp-subscription-process-get-redirect.html
+++ b/nodes/klicktipp-subscription-process-get-redirect.html
@@ -90,7 +90,7 @@
 			return this.name || 'Opt-in process redirect URL';
 		},
 		labelStyle: "klicktipp_label_style",
-		paletteLabel: 'Opt-in process redirect URL',
+		paletteLabel: 'Opt\u2013in process redirect URL',
 		onadd: function() {
 			ktPopulateConfig(this);
 		},
