--- a/nodes/klicktipp-subscription-process-get.html
+++ b/nodes/klicktipp-subscription-process-get.html
@@ -75,7 +75,7 @@
 			return this.name || 'Opt-in process get';
 		},
 		labelStyle: "klicktipp_label_style",
-		paletteLabel: 'Opt-in process get',
+		paletteLabel: 'Opt\u2013in process get',
 		onadd: function() {
 			ktPopulateConfig(this);
 		},
