--- a/nodes/klicktipp-subscription-process-index.html
+++ b/nodes/klicktipp-subscription-process-index.html
@@ -56,6 +56,6 @@
 			ktPopulateConfig(this);
 		},
 		labelStyle: "klicktipp_label_style",
-		paletteLabel: 'Opt-in process index',
+		paletteLabel: 'Opt\u2013in process index',
 	});
 </script>
