--- a/nodes/klicktipp-subscriber-subscribe.html
+++ b/nodes/klicktipp-subscriber-subscribe.html
@@ -150,8 +150,8 @@
 			ktInitializeTypedInput("#node-input-smsNumber", "#node-input-smsNumberType", 'str', ['str']);
 			ktInitializeTypedInput("#node-input-fields", "#node-input-fieldsType", 'msg', ['json', KT_CUSTOM_CONTACT_FIELDS_TYPE]);
 
-			ktPopulateDropdown(this.tagDropdown, this.tagId, `/klicktipp/tags/${this.id}`);
-			ktPopulateDropdown(this.listIdDropdown, this.listId, `/klicktipp/subscription-processes/${this.id}`);
+			ktPopulateDropdown(this.tagDropdown, this.tagId, this.klicktipp, `/klicktipp/tags/${this.id}`);
+			ktPopulateDropdown(this.listIdDropdown, this.listId, this.klicktipp, `/klicktipp/subscription-processes/${this.id}`);
 			ktHandleContactFieldsDisplay(this.contactListContainer, fieldsInput, this.id, this.fieldsData);
 		},
 		oneditsave: function() {
