--- a/nodes/klicktipp-subscription-process-get.html
+++ b/nodes/klicktipp-subscription-process-get.html
@@ -81,7 +81,7 @@
 		},
 		oneditprepare: function() {
 			const listIdDropdown = $('#node-input-listId');
-			ktPopulateDropdown(listIdDropdown, this.listId, `/klicktipp/subscription-process/${this.id}`);
+			ktPopulateDropdown(listIdDropdown, this.listId, this.klicktipp, `/klicktipp/subscription-process/${this.id}`);
 		},
 		// When the node editor is saved, capture the selected tagId
 		oneditsave: function() {
