--- a/nodes/klicktipp-subscriber-tagged.html
+++ b/nodes/klicktipp-subscriber-tagged.html
@@ -81,8 +81,9 @@
 			ktPopulateConfig(this);
 		},
 		oneditprepare: function() {
+			const klicktippInput = $('#node-input-klicktipp');
 			const tagDropdown = $('#node-input-tagId');
-			ktPopulateDropdown(tagDropdown, this.tagId, this.klicktipp, `/klicktipp/tags/${this.id}`);
+			ktBindDropdownToInput(klicktippInput, tagDropdown, this.tagId, this.klicktipp, `/klicktipp/tags/${this.id}`);
 		},
 		// When the node editor is saved, capture the selected tagId
 		oneditsave: function() {
