--- a/nodes/klicktipp-tag-update.html
+++ b/nodes/klicktipp-tag-update.html
@@ -105,8 +105,9 @@
 			ktPopulateConfig(this);
 		},
 		oneditprepare: function() {
+			const klicktippInput = $('#node-input-klicktipp');
 			const tagDropdown = $('#node-input-tagId');
-			ktPopulateDropdown(tagDropdown, this.tagId, this.klicktipp, `/klicktipp/tags/${this.id}`);
+			ktBindDropdownToInput(klicktippInput, tagDropdown, this.tagId, this.klicktipp, `/klicktipp/tags/${this.id}`);
 			// Initialize typedInput for both tagName and tagDescription with default values
 			ktInitializeTypedInput("#node-input-tagName", "#node-input-tagNameType", 'str', ['str']);
 			ktInitializeTypedInput("#node-input-tagDescription", "#node-input-tagDescriptionType", 'str', ['str']);
