--- a/nodes/klicktipp-subscriber-update.html
+++ b/nodes/klicktipp-subscriber-update.html
@@ -134,6 +134,7 @@
 			ktPopulateConfig(this);
 		},
 		oneditprepare: function() {
+			const klicktippInput = $('#node-input-klicktipp');
 			this.contactListContainer = $('#contact-fields-section');
 			const fieldsInput = $("#node-input-fields");
 
@@ -142,7 +143,7 @@
 			ktInitializeTypedInput("#node-input-newSmsNumber", "#node-input-newSmsNumberType", 'str', ['str']);
 			ktInitializeTypedInput("#node-input-fields", "#node-input-fieldsType", 'msg', ['json', KT_CUSTOM_CONTACT_FIELDS_TYPE]);
 
-			ktHandleContactFieldsDisplay(this.contactListContainer, fieldsInput, this.id, this.fieldsData, this.klicktipp);
+			ktHandleContactFieldsDisplay(this.contactListContainer, fieldsInput, klicktippInput, this.id, this.fieldsData);
 		},
 		oneditsave: function() {
 			// Collect all field from API vales and store them in this.fieldsData
