feat: change node icon and color

--- a/nodes/klicktipp-subscriber-get.html
+++ b/nodes/klicktipp-subscriber-get.html
@@ -58,7 +58,7 @@
 <script type="text/javascript">
 	RED.nodes.registerType('klicktipp-subscriber-get', {
 		category: 'KlickTipp',
-		color: '#1B2C3D',
+		color: '#DAE1FC',
 		defaults: {
 			klicktipp: { type: 'klicktipp-config', required: true },
 			subscriberId: {
