--- a/nodes/klicktipp-tag-create.html
+++ b/nodes/klicktipp-tag-create.html
@@ -64,7 +64,7 @@
 <script type="text/javascript">
 	RED.nodes.registerType('klicktipp-tag-create', {
 		category: 'KlickTipp',
-		color: '#1B2C3D',
+		color: '#DAE1FC',
 		defaults: {
 			klicktipp: { type: 'klicktipp-config', required: true },
 			//tagName is used to avoid conflict with the Node-RED core name property
