--- a/nodes/klicktipp-tag-delete.html
+++ b/nodes/klicktipp-tag-delete.html
@@ -57,7 +57,7 @@
 <script type="text/javascript">
 	RED.nodes.registerType('klicktipp-tag-delete', {
 		category: 'KlickTipp',
-		color: '#1B2C3D',
+		color: '#DAE1FC',
 		defaults: {
 			klicktipp: { type: 'klicktipp-config', required: true },
 			tagId: {
