--- a/nodes/klicktipp-resend-autoresponder.html
+++ b/nodes/klicktipp-resend-autoresponder.html
@@ -64,7 +64,7 @@
 <script type="text/javascript">
 	RED.nodes.registerType('klicktipp-resend-autoresponder', {
 		category: 'KlickTipp',
-		color: '#1B2C3D',
+		color: '#DAE1FC',
 		defaults: {
 			klicktipp: { type: 'klicktipp-config', required: true },
 			email: {
