--- a/nodes/klicktipp-subscriber-delete.html
+++ b/nodes/klicktipp-subscriber-delete.html
@@ -58,7 +58,7 @@
 <script type="text/javascript">
 	RED.nodes.registerType('klicktipp-subscriber-delete', {
 		category: 'KlickTipp',
-		color: '#1B2C3D',
+		color: '#DAE1FC',
 		defaults: {
 			prefix: { },
 			klicktipp: { type: 'klicktipp-config', required: true },
