--- a/nodes/klicktipp-subscriber-signout.html
+++ b/nodes/klicktipp-subscriber-signout.html
@@ -60,7 +60,7 @@
 <script type="text/javascript">
 	RED.nodes.registerType('klicktipp-subscriber-signout', {
 		category: 'KlickTipp',
-		color: '#1B2C3D',
+		color: '#DAE1FC',
 		defaults: {
 			apiKey: {
 				value: 'payload.apiKey',
