--- a/nodes/klicktipp-subscription-process-get-redirect.html
+++ b/nodes/klicktipp-subscription-process-get-redirect.html
@@ -63,7 +63,7 @@
 <script type="text/javascript">
 	RED.nodes.registerType('klicktipp-subscription-process-get-redirect', {
 		category: 'KlickTipp',
-		color: '#1B2C3D',
+		color: '#DAE1FC',
 		defaults: {
 			klicktipp: { type: 'klicktipp-config', required: true },
 			email: {
