--- a/nodes/klicktipp-tag-update.html
+++ b/nodes/klicktipp-tag-update.html
@@ -69,7 +69,7 @@
 <script type="text/javascript">
 	RED.nodes.registerType('klicktipp-tag-update', {
 		category: 'KlickTipp',
-		color: '#1B2C3D',
+		color: '#DAE1FC',
 		defaults: {
 			klicktipp: { type: 'klicktipp-config', required: true },
 			tagName: {
