--- a/nodes/klicktipp-subscriber-update.html
+++ b/nodes/klicktipp-subscriber-update.html
@@ -135,7 +135,7 @@
 		},
 		oneditprepare: function() {
 			const klicktippInput = $('#node-input-klicktipp');
-			this.contactListContainer = $('#contact-fields-section');
+			this.contactFieldsSection = $('#contact-fields-section');
 			const fieldsInput = $("#node-input-fields");
 
 			ktInitializeTypedInput("#node-input-subscriberId", "#node-input-subscriberIdType", 'num', ['num']);
@@ -143,11 +143,15 @@
 			ktInitializeTypedInput("#node-input-newSmsNumber", "#node-input-newSmsNumberType", 'str', ['str']);
 			ktInitializeTypedInput("#node-input-fields", "#node-input-fieldsType", 'msg', ['json', KT_CUSTOM_CONTACT_FIELDS_TYPE]);
 
-			ktHandleContactFieldsDisplay(this.contactListContainer, fieldsInput, klicktippInput, this.id, this.fieldsData);
+			// Initialize the contact fields section logic
+			ktInitializeContactFieldsSection(fieldsInput, this.contactFieldsSection, klicktippInput, this.fieldsData, this.id);
+
+			// Initialize the select handler with user change detection
+			ktInitializeUserSelectHandler(klicktippInput, '#node-input-fieldsType', this.contactFieldsSection, this.fieldsData, this.id);
 		},
 		oneditsave: function() {
 			// Collect all field from API vales and store them in this.fieldsData
-			this.fieldsData = ktSaveContactFieldValues(this.contactListContainer);
+			this.fieldsData = ktSaveContactFieldValues(this.contactFieldsSection);
 		}
 	});
 </script>
