--- a/nodes/klicktipp-subscriber-update.html
+++ b/nodes/klicktipp-subscriber-update.html
@@ -10,7 +10,7 @@
 	</div>
 	<div class="form-row">
 	    <label for="node-input-newEmail"><i class="fa fa-envelope"></i> <span>Email address</span></label>
-	    <input type="text" id="node-input-newEmail" placeholder="Enter email address">
+	    <input type="text" id="node-input-newEmail" placeholder="Enter email address (optional)">
 	    <input type="hidden" id="node-input-newEmailType">
 	</div>
 	<div class="form-row">
