feat: update returned data structure for version 1.0.2

--- a/nodes/klicktipp-field-index.html
+++ b/nodes/klicktipp-field-index.html
@@ -10,7 +10,7 @@
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp-field-index">
-	<p>Returns an associative array <code>[field_id] => [field_name]</code> of all data fields.</p>
+	<p>Returns an associative array <code>[field_id] => [field_name]</code> of all data fields</p>
 	<h3>Outputs</h3>
 	<dl class="message-properties">
 		<dt>msg.payload <span class="property-type">object</span></dt>
