--- a/nodes/klicktipp-subscription-process-index.html
+++ b/nodes/klicktipp-subscription-process-index.html
@@ -10,7 +10,7 @@
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp-subscription-process-index">
-	<p>Returns an associative array <code>[double_optin_process_id] => [double_optin_process_name]</code> of all opt-in processes.</p>
+	<p>Returns an associative array in the format <code>{ optin_process_id: optin_process_name }</code>, where each key represents the unique ID of an opt-in process, and its value is the corresponding opt-in process name.</p>
 	<h3>Outputs</h3>
 	<dl class="message-properties">
 		<dt>msg.payload <span class="property-type">object</span></dt>
