--- a/nodes/klicktipp-tag-index.html
+++ b/nodes/klicktipp-tag-index.html
@@ -10,7 +10,7 @@
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp-tag-index">
-	<p>Returns an associative array <code>[tag_id] => [tag_name]</code> of all manual tags and SmartLinks.
+	<p>Returns an associative array in the format <code>{ tag_id: tag_name }</code>, where each key represents the unique ID of a manual tag or SmartLink, and the value is the corresponding tag name.
 	Use the <code>Tag get</code> node to retrieve the name and description of a tag.</p>
 	<h3>Outputs</h3>
 	<dl class="message-properties">
