feat: 1.0.4. Current progress

--- a/nodes/subscribers/klicktipp-subscriber-update.html
+++ b/nodes/subscribers/klicktipp-subscriber-update.html
@@ -91,7 +91,7 @@
 			},
 			newEmail: {
 				value: 'payload.newEmail',
-				validate: RED.validators.typedInput('emailType')
+				validate: RED.validators.typedInput('newEmailType')
 			},
 			newEmailType: {
 				value: 'msg'
