--- a/nodes/fields/get/klicktipp-field-get.html
+++ b/nodes/fields/get/klicktipp-field-get.html
@@ -33,7 +33,7 @@
 		outputs: 1,
 		icon: 'klicktipp.svg',
 		label: function () {
-			return this.name || this._("klicktipp-field-get.name");
+			return this.name || this._('klicktipp-field-get.name');
 		},
 		labelStyle: "klicktipp_label_style",
 		paletteLabel: function () {
