feat: current progress

--- a/nodes/config/klicktipp-config.html
+++ b/nodes/config/klicktipp-config.html
@@ -44,6 +44,8 @@
 					missingCredentials: this._("klicktipp-config.error.missing-credentials"),
 					noItems: this._("klicktipp-config.error.no-items"),
 					generic: this._("klicktipp-config.error.generic-error"),
+					missingConfiguration: this._('klicktipp-config.error.missing-configuration'),
+					failedFetchData: this._('klicktipp-config.error.failed-to-fetch'),
 				},
 			};
 
